<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.usc.recipes.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/recipe_logo" />


        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="40sp"
            android:text="@string/app_name"
            />

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:gravity="center"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp"
            android:text="@string/overall_login"
            />

        <EditText
            android:id="@+id/plain_text_input"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp"
            android:hint="Username"
            android:inputType="text"/>

        <EditText
            android:id="@+id/plain_text_input1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp"
            android:hint="Password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight=".25"
            android:text="@string/sign_in"
            android:onClick="onClick_SignIn" />

        <Button
            android:id="@+id/buttonGuest"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight=".25"
            android:text="@string/guest"
            android:onClick="onClick_Guest" />

    </LinearLayout>

</RelativeLayout>
